# VPS

./: .gitignore  CLAUDE.md  README.md
projects/fwc-super-scraper/: .gitignore  BACKLOG.md  README.md  RUN_LOG.md  pyproject.toml
projects/fwc-super-scraper/samples/: README.md  sample_dataset.csv
projects/fwc-super-scraper/scripts/: apra_backfill.py  apra_dump_to_csv.py  auto_prune_if_full.sh  back_populate_rescan.py  dashboard.py  empirical_recall_scan.py  export_full_csv.py  extract_chunked.sh  finish_backlog.sh  launch_continuous.sh  ocr_batched.sh  ocr_pipeline.py  prune_extracted_pdfs.py  run_chunk.sh  run_continuous.sh  run_next1k.sh  run_pilot.sh  save_fixture.py
projects/fwc-super-scraper/src/fwc_super/: __init__.py  cli.py  crawl.py  db.py  download.py  enrich.py  extract.py  funds.py  http.py
projects/fwc-super-scraper/tests/: test_crawl.py  test_extract.py  test_funds.py
projects/fwc-super-scraper/tests/fixtures/: search_page0.html
samples/csv-clean/: README.md  csv_clean.py
samples/csv-clean/examples/: cleaned.csv  messy.csv
samples/csv-clean/tests/: test_csv_clean.py
samples/ts-bug-fix/: README.md  package-lock.json  package.json  tsconfig.json
samples/ts-bug-fix/src/: buggy.ts  fixed.ts  types.ts
samples/ts-bug-fix/tests/: compare.test.ts
