[project]
name = "fwc-super-scraper"
version = "0.1.0"
description = "Build a queryable dataset of default super funds from approved Australian enterprise agreements (Fair Work Commission)"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "selectolax>=0.3.21",
    "pdfplumber>=0.11",
    "rapidfuzz>=3.9",
    "rich>=13.7",
    "click>=8.1",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "pdf2image>=1.17"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
fwc = "fwc_super.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
